packages/ui/src/elements/SortRow/index.scss
@import '../../scss/styles.scss';

@layer payload-default {
  .sort-row {
    opacity: 0.3;
    cursor: not-allowed;

    &.active {
      cursor: grab;
      opacity: 1;
    }

    &__icon {
      height: 22px;
      width: 22px;
      margin-left: -2px;
      margin-top: -2px;
      display: block;
      width: min-content;
    }
  }
}

